Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37206

galera.galera_sst_encrypted LeakSanitizer: detected memory leaks

    XMLWordPrintable

Details

    • Not for Release Notes
    • Q3/2025 Galera Development

    Description

      galera.galera_sst_encrypted 'ctr'        w10 [ pass ]  14271
      ***Warnings generated in error logs during shutdown after running tests: galera.galera_ssl_compression
       
      ==2058028==ERROR: LeakSanitizer: detected memory leaks
      SUMMARY: AddressSanitizer: 24 byte(s) leaked in 1 allocation(s).
      250708 15:25:26 [ERROR] /home/jan/work/mariadb/10.11-mariadb/sql/mariadbd got signal 6 ;
      Attempting backtrace. Include this in the bug report.
      ==2058088==ERROR: LeakSanitizer: detected memory leaks
      SUMMARY: AddressSanitizer: 24 byte(s) leaked in 1 allocation(s).
      250708 15:25:25 [ERROR] /home/jan/work/mariadb/10.11-mariadb/sql/mariadbd got signal 6 ;
      Attempting backtrace. Include this in the bug report.
      

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            janlindstrom Jan Lindström
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: